rke/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: test.contendo.jp
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
